RESOLVED FIXED126289
REGRESSION (r158369): Some pop-up windows open at incorrect size (affects GMail, theblaze.com)
https://bugs.webkit.org/show_bug.cgi?id=126289
Summary REGRESSION (r158369): Some pop-up windows open at incorrect size (affects GMa...
Jim Oase
Reported 2013-12-30 07:00:36 PST
For several weeks those spawned windows have been the wrong size, they have been full screen. Safari works ... webkit, not so much http://mf.sitescout.com/disp?pid=6AA0C4335D&rnd=[CACHE-BUSTING-ID-HERE]&sid=371
Attachments
The window size with build WebKit-SVN-r158090 (524.46 KB, image/jpeg)
2014-01-03 09:46 PST, Jim Oase
no flags
Window size with Build r161259 47.2 MB 2014-01-03 16:52:21 GMT (491.19 KB, image/jpeg)
2014-01-03 09:50 PST, Jim Oase
no flags
Safari view of window with proper size (632.62 KB, image/jpeg)
2014-01-03 09:59 PST, Jim Oase
no flags
WIP Gmail fix (9.15 KB, patch)
2014-01-09 18:56 PST, Gavin Barraclough
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (458.20 KB, application/zip)
2014-01-09 19:50 PST, Build Bot
no flags
Fix (12.63 KB, patch)
2014-01-10 18:25 PST, Gavin Barraclough
andersca: review+
Alexey Proskuryakov
Comment 2 2014-01-02 16:06:41 PST
I cannot reproduce this with WebKit nightly r161208. When I open <http://mf.sitescout.com/disp?pid=6AA0C4335D&rnd=[CACHE-BUSTING-ID-HERE]&sid=371>, and click on an article link, a page opens that is the same size as the current page.
Jim Oase
Comment 3 2014-01-03 09:46:55 PST
Created attachment 220309 [details] The window size with build WebKit-SVN-r158090 Next will be a window size with latest nightly build. Build 158090 produces the reduced size window. Build r161259 47.2 MB 2014-01-03 16:52:21 GMT produces a full screen window... see next attachment
Jim Oase
Comment 4 2014-01-03 09:50:27 PST
Created attachment 220311 [details] Window size with Build r161259 47.2 MB 2014-01-03 16:52:21 GMT See previous report for comparison results. I am using Software OS X 10.9.1 (13B42) Model Name: MacBook Pro Model Identifier: MacBookPro8,3 Processor Name: Intel Core i7 Processor Speed: 2.2 GHz Number of Processors: 1 Total Number of Cores: 4 L2 Cache (per Core): 256 KB L3 Cache: 6 MB Memory: 16 GB Boot ROM Version: MBP81.0047.B27 SMC Version (system): 1.70f6 Serial Number (system): C02FT1KKDF93 Hardware UUID: 0112776F-3C1A-5407-B085-A7AD4996D69F Sudden Motion Sensor: State: Enabled
Jim Oase
Comment 5 2014-01-03 09:59:32 PST
Created attachment 220313 [details] Safari view of window with proper size
Alexey Proskuryakov
Comment 6 2014-01-03 11:40:18 PST
The page on the screenshot looks nothing like <http://mf.sitescout.com/disp?pid=6AA0C4335D&rnd=[CACHE-BUSTING-ID-HERE]&sid=371>. This probably explains why I can't reproduce.
Alexey Proskuryakov
Comment 7 2014-01-03 12:01:22 PST
There is a similar issue with GMail, which is almost certainly the same. <rdar://problem/15744126>
Gavin Barraclough
Comment 8 2014-01-09 18:56:20 PST
Created attachment 220798 [details] WIP Gmail fix
WebKit Commit Bot
Comment 9 2014-01-09 18:58:27 PST
Attachment 220798 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/UIProcess/WebPageProxy.cpp', u'Source/WebKit2/UIProcess/WebPageProxy.h', u'Source/WebKit2/WebProcess/WebPage/WebPage.cpp', u'Source/WebKit2/WebProcess/WebPage/WebPage.h', u'Source/WebKit2/WebProcess/WebProcess.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebKit2/WebProcess/WebPage/WebPage.h:173: The parameter name "parameters" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 10 2014-01-09 19:02:01 PST
WIP patch basically reverts https://bugs.webkit.org/show_bug.cgi?id=123557 , that change made the creation parameters retrieved synchronously be window.open be retained, and also passed by CreateWebPage. This change reverts to the old behavior where the new (inconsistent) state is sent with CreateWebPage - but now, instead of just ignoring it we update the WebPage accordingly. This is likely to cause some test failures; go go gadget EWS.
Build Bot
Comment 11 2014-01-09 19:50:30 PST
Comment on attachment 220798 [details] WIP Gmail fix Attachment 220798 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6680620302336000 New failing tests: fast/dom/Window/mozilla-focus-blur.html
Build Bot
Comment 12 2014-01-09 19:50:31 PST
Created attachment 220799 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Gavin Barraclough
Comment 13 2014-01-10 18:25:49 PST
Anders Carlsson
Comment 14 2014-01-10 18:28:29 PST
Comment on attachment 220916 [details] Fix View in context: https://bugs.webkit.org/attachment.cgi?id=220916&action=review > LayoutTests/platform/mac-wk2/fast/dom/Window/mozilla-focus-blur-expected.txt:8 > -PASS: The focus should not have been changed! > -PASS: The focus should not have been changed! > -PASS: The focus should not have been changed with URL=data:text/html,<script>opener.focus();opener.postMessage("", "*");</script> > -PASS: The focus should not have been changed with URL=data:text/html,<script>blur();opener.postMessage("", "*");</script> > +FAIL: The focus should not have been changed! > +FAIL: The focus should not have been changed! > +FAIL: The focus should not have been changed with URL=data:text/html,<script>opener.focus();opener.postMessage("", "*");</script> > +FAIL: The focus should not have been changed with URL=data:text/html,<script>blur();opener.postMessage("", "*");</script> I think it's better if we skip this test instead of landing new results.
Gavin Barraclough
Comment 15 2014-01-15 13:36:21 PST
Committed revision 162088.
Note You need to log in before you can comment on or make changes to this bug.