REGRESSION (r158369): Some pop-up windows open at incorrect size (affects GMail, theblaze.com) https://bugs.webkit.org/show_bug.cgi?id=126289

Reviewed by Anders Carlson.

Partial revert of https://bugs.webkit.org/show_bug.cgi?id=123557.
On window.open, update page when the UIProcess sends the create message

Source/WebKit2:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::initializeWebPage):
(WebKit::WebPageProxy::creationParameters):
* UIProcess/WebPageProxy.h:
    - creation paraments are not preserved at window.open.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::reinitializeWebPage):
(WebKit::WebPage::setViewState):
(WebKit::WebPage::setViewStateInternal):
* WebProcess/WebPage/WebPage.h:
    - add interface to update page.
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::createWebPage):
    - if we try to create a page that already exists, update the current page's view state.

LayoutTests:

* platform/mac-wk2/TestExpectations:
    - test is bad (results in DRT don't reflect in browser behaviour).



Canonical link: https://commits.webkit.org/145065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162088 268f45cc-cd09-0410-ab3c-d52691b4dbfc